.metadata/.plugins/org.eclipse.cdt.ui/Hello_World.build.log
17:27:13 **** Build of configuration master for project Hello_World ****
make -r -j 8 --output-sync=target --no-print-directory 
Loaded project.mk
****************************************************************************
* Analog Devices MSDK
* - User Guide: https://analogdevicesinc.github.io/msdk/USERGUIDE/
* - Get Support: https://www.analog.com/support/technical-support.html
* - Report Issues: https://github.com/analogdevicesinc/msdk/issues
* - Contributing: https://analogdevicesinc.github.io/msdk/CONTRIBUTING/
****************************************************************************
- CC slave_program.c
slave_program.c: In function 'I2C_Slave_Init':
slave_program.c:47:5: error: implicit declaration of function 'MXC_I2C_SetSlaveCallback'; did you mean 'MXC_I2C_DMACallback'? [-Werror=implicit-function-declaration]
   47 |     MXC_I2C_SetSlaveCallback(I2C_SLAVE, I2C_Slave_Handler);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     MXC_I2C_DMACallback
cc1.exe: some warnings being treated as errors
make: *** [C:/MaximSDK/Libraries/CMSIS/Device/Maxim/GCC/gcc.mk:542: /c/MaximSDK/Examples/MAX32660/Hello_World/build/slave_program.o] Error 1
"make -r -j 8 --output-sync=target --no-print-directory" terminated with exit code 2. Build might be incomplete.

17:27:13 Build Failed. 2 errors, 0 warnings. (took 595ms)

